name:          mchost
version:       0.1
synopsis:      A Minecraft server in Haskell.
author:        Elliott Hird
maintainer:    penguinofthegods@gmail.com
category:      Game
build-type:    Simple
cabal-version: >= 1.10

executable mchost
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
    base >= 4.3 && < 4.5,
    template-haskell >= 2.5 && < 2.7,
    bytestring == 0.9.*,
    cereal == 0.3.*,
    text == 0.11.*
  ghc-options: -Wall -O2
