name:          mchost
version:       0.1
synopsis:      A Minecraft server in Haskell.
author:        Elliott Hird
maintainer:    penguinofthegods@gmail.com
category:      Game
license:       BSD3
license-file:  LICENSE
build-type:    Simple
cabal-version: >= 1.10

executable mchost
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
    base >= 4.3 && < 4.5,
    template-haskell >= 2.5 && < 2.7,
    bytestring == 0.9.*,
    network == 2.3.*,
    cereal == 0.3.*,
    cereal-ieee754 == 0.1.*,
    text == 0.11.*,
    iterIO == 0.2.*
  ghc-options: -Wall -O2 -funbox-strict-fields
