name:          mchost
version:       0.1
synopsis:      A Minecraft server in Haskell.
author:        Elliott Hird
maintainer:    penguinofthegods@gmail.com
category:      Game
license:       BSD3
license-file:  LICENSE
homepage:      http://github.com/ehird/mchost
build-type:    Simple
cabal-version: >= 1.10

source-repository head
  type: git
  location: https://github.com/ehird/mchost.git

executable mchost
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
    base >= 4.3 && < 4.5,
    transformers == 0.2.*,
    template-haskell >= 2.5 && < 2.7,
    bytestring == 0.9.*,
    network == 2.3.*,
    cereal == 0.3.*,
    cereal-ieee754 == 0.1.*,
    text == 0.11.*,
    iterIO == 0.2.*,
    zlib-bindings == 0.0.*
  ghc-options: -Wall -funbox-strict-fields
